# advent2020

./: Cargo.toml  README.md
src/: .#day20.rs  .#day4.rs  .#day8.rs  .#day9.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  day_template.rs  lib.rs  libday1.rs  main.rs
src/parsers/: day16.pest  day18.pest  day19.pest  day2.pest  day21.pest  day4.pest  day7.pest  day8.pest
